--- a/package.json
+++ b/package.json
@@ -13,29 +13,69 @@
     "start": "next start"
   },
   "dependencies": {
+    "@albedo-link/intent": "^0.12.0",
+    "@algolia/autocomplete-core": "^1.11.0",
+    "@algolia/autocomplete-js": "^1.9.2",
+    "@algolia/autocomplete-plugin-query-suggestions": "^1.9.2",
+    "@algolia/autocomplete-plugin-recent-searches": "^1.9.2",
+    "@algolia/autocomplete-theme-classic": "^1.9.2",
+    "@creit-tech/xbull-wallet-connect": "github:Creit-Tech/xBull-Wallet-Connect",
+    "@headlessui/react": "^1.7.3",
+    "@heroicons/react": "^2.0.12",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.6.0",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.6",
+    "@stellar/freighter-api": "^1.4.0",
     "@t3-oss/env-nextjs": "^0.7.1",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.43.6",
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "@walletconnect/sign-client": "^2.4.6",
+    "@web3modal/core": "2.0.0-beta.7",
+    "@web3modal/react": "^2.2.2",
+    "@web3modal/standalone": "^2.2.2",
+    "@web3modal/ui": "2.0.0-beta.7",
+    "axios": "^1.5.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "cookies-next": "^2.1.1",
+    "csv-iter-parse": "^0.0.4",
+    "firebase": "^10.3.1",
+    "lodash.isequal": "^4.5.0",
+    "lucide-react": "^0.274.0",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
+    "nextjs-cors": "^2.1.2",
+    "pino": "^8.8.0",
+    "pino-pretty": "^9.4.1",
+    "plaiceholder": "^2.5.0",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
+    "react-markdown": "^8.0.3",
+    "stellar-sdk": "^10.4.1",
     "superjson": "^2.2.1",
-    "zod": "^3.22.4"
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/eslint": "^8.44.7",
     "@types/node": "^18.17.0",
     "@types/react": "^18.2.37",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "autoprefixer": "^10.4.14",
+    "daisyui": "^4.6.0",
     "eslint": "^8.54.0",
     "eslint-config-next": "^14.0.4",
     "postcss": "^8.4.31",
