setupt jwt credential auth

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^8.44.7",
     "@types/node": "^18.17.0",
     "@types/react": "^18.2.37",
