--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@creit-tech/xbull-wallet-connect": "github:Creit-Tech/xBull-Wallet-Connect",
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
+    "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.6.0",
     "@radix-ui/react-dialog": "^1.0.4",
