--- a/package.json
+++ b/package.json
@@ -90,5 +90,8 @@
   "ct3aMetadata": {
     "initVersion": "7.25.2"
   },
-  "packageManager": "pnpm@8.10.0"
+  "packageManager": "pnpm@8.10.0",
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  }
 }
