--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
     "@walletconnect/sign-client": "^2.4.6",
+    "@walletconnect/utils": "^2.11.0",
     "@web3modal/core": "2.0.0-beta.7",
     "@web3modal/react": "^2.2.2",
     "@web3modal/standalone": "^2.2.2",
