--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "@uploadthing/react": "^6.2.0",
     "@walletconnect/sign-client": "^2.4.6",
     "@walletconnect/utils": "^2.11.0",
     "@web3modal/core": "2.0.0-beta.7",
@@ -66,6 +67,7 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.2.0",
     "zod": "^3.22.4",
     "zustand": "^4.4.1"
   },
