--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "stellar-sdk": "^10.4.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^1.14.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.2.0",
     "zod": "^3.22.4",
