--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "plaiceholder": "^2.5.0",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
+    "react-daisyui": "^5.0.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
