--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cookies-next": "^2.1.1",
+    "crypto-random-string": "^5.0.0",
     "csv-iter-parse": "^0.0.4",
     "date-fns": "^3.3.1",
     "firebase": "^10.3.1",
@@ -68,6 +69,7 @@
     "stellar-sdk": "^10.4.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^1.14.0",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.2.0",
@@ -77,6 +79,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^8.44.7",
+    "@types/lodash.isequal": "^4.5.8",
     "@types/node": "^18.17.0",
     "@types/react": "^18.2.37",
     "@types/react-copy-to-clipboard": "^5.0.4",
