--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "csv-iter-parse": "^0.0.4",
     "date-fns": "^3.3.1",
     "firebase": "^10.3.1",
+    "lodash": "^4.17.21",
     "lodash.isequal": "^4.5.0",
     "lucide-react": "^0.274.0",
     "next": "^14.0.4",
