--- a/package.json
+++ b/package.json
@@ -65,9 +65,11 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-daisyui": "^5.0.0",
     "react-dom": "18.2.0",
+    "react-h5-audio-player": "^3.9.1",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^8.0.3",
+    "sass": "^1.71.1",
     "stellar-sdk": "^10.4.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^1.14.0",
