--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@heroicons/react": "^2.0.12",
     "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@pinata/sdk": "^2.1.0",
     "@prisma/client": "^5.6.0",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.6",
@@ -52,6 +53,8 @@
     "csv-iter-parse": "^0.0.4",
     "date-fns": "^3.3.1",
     "firebase": "^10.3.1",
+    "form-data": "^4.0.0",
+    "formidable": "^2.1.2",
     "lodash": "^4.17.21",
     "lodash.isequal": "^4.5.0",
     "lucide-react": "^0.274.0",
@@ -83,6 +86,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^8.44.7",
+    "@types/formidable": "^3.4.5",
     "@types/lodash.isequal": "^4.5.8",
     "@types/node": "^18.17.0",
     "@types/react": "^18.2.37",
