--- a/package.json
+++ b/package.json
@@ -72,7 +72,9 @@
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^8.0.3",
+    "react-square-web-payments-sdk": "^3.2.1",
     "sass": "^1.71.1",
+    "square": "^33.0.0",
     "stellar-sdk": "^10.4.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^1.14.0",
