--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^8.0.3",
+    "react-quill": "^2.0.0",
     "react-square-web-payments-sdk": "^3.2.1",
     "sass": "^1.71.1",
     "square": "^33.0.0",
