--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "csv-iter-parse": "^0.0.4",
     "date-fns": "^3.3.1",
     "firebase": "^10.3.1",
+    "firebase-admin": "^12.1.0",
     "form-data": "^4.0.0",
     "formidable": "^2.1.2",
     "lodash": "^4.17.21",
