--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@albedo-link/intent": "^0.12.0",
+    "@albedo-link/signature-verification": "^0.1.2",
     "@algolia/autocomplete-core": "^1.11.0",
     "@algolia/autocomplete-js": "^1.9.2",
     "@algolia/autocomplete-plugin-query-suggestions": "^1.9.2",
