--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
     "@uploadthing/react": "^6.2.0",
+    "@vis.gl/react-google-maps": "^1.0.0",
     "@walletconnect/sign-client": "^2.4.6",
     "@walletconnect/utils": "^2.11.0",
     "@web3modal/core": "2.0.0-beta.7",
