--- a/package.json
+++ b/package.json
@@ -27,7 +27,13 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@pinata/sdk": "^2.1.0",
     "@prisma/client": "^5.6.0",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@stellar/freighter-api": "^1.4.0",
     "@t3-oss/env-nextjs": "^0.7.1",
@@ -48,7 +54,7 @@
     "@web3modal/ui": "2.0.0-beta.7",
     "axios": "^1.5.0",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.0",
     "colors-helper-tools": "^1.5.7",
     "cookies-next": "^2.1.1",
     "crypto-random-string": "^5.0.0",
@@ -63,6 +69,7 @@
     "lucide-react": "^0.274.0",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
+    "next-themes": "^0.3.0",
     "nextjs-cors": "^2.1.2",
     "pino": "^8.8.0",
     "pino-pretty": "^9.4.1",
