--- a/package.json
+++ b/package.json
@@ -23,15 +23,16 @@
     "@creit-tech/xbull-wallet-connect": "github:Creit-Tech/xBull-Wallet-Connect",
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
-    "@hookform/resolvers": "^3.3.4",
+    "@hookform/resolvers": "^3.4.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@pinata/sdk": "^2.1.0",
     "@prisma/client": "^5.6.0",
     "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.6",
@@ -79,7 +80,7 @@
     "react-daisyui": "^5.0.0",
     "react-dom": "18.2.0",
     "react-h5-audio-player": "^3.9.1",
-    "react-hook-form": "^7.48.2",
+    "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^8.0.3",
     "react-quill": "^2.0.0",
@@ -94,7 +95,7 @@
     "tailwindcss-animate": "^1.0.7",
     "ts-pattern": "^5.1.2",
     "uploadthing": "^6.2.0",
-    "zod": "^3.22.4",
+    "zod": "^3.23.8",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
