--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.4.2",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@next/bundle-analyzer": "^14.2.3",
     "@pinata/sdk": "^2.1.0",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@stellar/freighter-api": "^1.7.1",
+    "@stellar/stellar-sdk": "^12.0.1",
     "@t3-oss/env-nextjs": "^0.7.3",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.13",
@@ -74,7 +76,6 @@
     "react-square-web-payments-sdk": "^3.2.1",
     "sass": "^1.77.4",
     "square": "^36.0.0",
-    "stellar-sdk": "^10.4.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar": "^3.1.0",
@@ -121,5 +122,4 @@
       "tslib": "^2.3.1"
     }
   }
-
 }
