--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@stellar/freighter-api": "^1.7.1",
     "@stellar/stellar-sdk": "^12.0.1",
@@ -52,7 +53,7 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "colors-helper-tools": "^1.5.9",
+    "colors-helper-tools": "^1.6.6",
     "cookies-next": "^2.1.2",
     "crypto-random-string": "^5.0.0",
     "csv-iter-parse": "^0.0.4",
