Transaction History, Minor Fixing

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^8.0.7",
+    "react-qr-code": "^2.0.14",
     "react-quill": "^2.0.0",
     "react-square-web-payments-sdk": "^3.2.1",
     "sass": "^1.77.4",
