--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@next/bundle-analyzer": "^14.2.3",
     "@pinata/sdk": "^2.1.0",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
