--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "pino-pretty": "^9.4.1",
     "plaiceholder": "^2.5.0",
     "react": "18.2.0",
+    "react-cool-onclickoutside": "^1.7.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-daisyui": "^5.0.0",
     "react-dom": "18.2.0",
@@ -82,6 +83,7 @@
     "tailwindcss-animate": "^1.0.7",
     "ts-pattern": "^5.1.2",
     "uploadthing": "^6.12.0",
+    "use-places-autocomplete": "^4.0.1",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
@@ -89,6 +91,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^8.56.10",
     "@types/formidable": "^3.4.5",
+    "@types/google.maps": "^3.55.10",
     "@types/lodash.isequal": "^4.5.8",
     "@types/node": "^18.19.34",
     "@types/react": "^18.3.3",
