BUG FIX Issue 10-34

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@pinata/sdk": "^2.1.0",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -59,6 +60,8 @@
     "crypto-random-string": "^5.0.0",
     "csv-iter-parse": "^0.0.4",
     "date-fns": "^3.6.0",
+    "embla-carousel": "^8.1.6",
+    "embla-carousel-react": "^8.1.6",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.1.1",
     "form-data": "^4.0.0",
