--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
@@ -97,6 +97,7 @@
     "ts-pattern": "^5.1.2",
     "uploadthing": "^6.12.0",
     "use-places-autocomplete": "^4.0.1",
+    "vaul": "^0.9.1",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
