--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "lucide-react": "^0.274.0",
     "next": "^14.2.5",
     "next-auth": "^4.24.7",
+    "next-nprogress-bar": "^2.3.13",
     "next-themes": "^0.3.0",
     "nextjs-cors": "^2.2.0",
     "pino": "^8.21.0",
