--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^8.0.7",
+    "react-player": "^2.16.0",
     "react-qr-code": "^2.0.15",
     "react-quill": "^2.0.0",
     "react-square-web-payments-sdk": "^3.2.1",
