--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-three/drei": "^9.114.3",
+    "@react-three/fiber": "^8.17.10",
     "@stellar/freighter-api": "^1.7.1",
     "@stellar/stellar-sdk": "^12.1.0",
     "@t3-oss/env-nextjs": "^0.7.3",
@@ -50,6 +52,7 @@
     "@trpc/next": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
+    "@types/three": "^0.169.0",
     "@uiw/react-md-editor": "^4.0.4",
     "@uploadthing/react": "^6.7.2",
     "@vis.gl/react-google-maps": "^1.1.0",
@@ -104,6 +107,7 @@
     "tailwind-scrollbar": "^3.1.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.169.0",
     "ts-pattern": "^5.2.0",
     "uploadthing": "^6.13.2",
     "use-places-autocomplete": "^4.0.1",
