--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
     "@types/cors": "^2.8.17",
+    "@types/nodemailer": "^6.4.16",
     "@types/three": "^0.169.0",
     "@uiw/react-md-editor": "^4.0.4",
     "@uploadthing/react": "^6.7.2",
@@ -89,6 +90,7 @@
     "next-share": "^0.27.0",
     "next-themes": "^0.3.0",
     "nextjs-cors": "^2.2.0",
+    "nodemailer": "^6.9.16",
     "pino": "^8.21.0",
     "pino-pretty": "^9.4.1",
     "plaiceholder": "^2.5.0",
