--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
     "@types/cors": "^2.8.17",
+    "@types/mapbox-gl": "^3.4.1",
     "@types/nodemailer": "^6.4.16",
     "@types/three": "^0.169.0",
     "@uiw/react-md-editor": "^4.0.4",
@@ -86,6 +87,7 @@
     "lodash": "^4.17.21",
     "lodash.isequal": "^4.5.0",
     "lucide-react": "^0.274.0",
+    "mapbox-gl": "^3.8.0",
     "next": "^14.2.5",
     "next-auth": "^4.24.7",
     "next-nprogress-bar": "^2.3.13",
@@ -105,6 +107,7 @@
     "react-h5-audio-player": "^3.9.3",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
+    "react-map-gl": "^7.1.7",
     "react-markdown": "^8.0.7",
     "react-player": "^2.16.0",
     "react-qr-code": "^2.0.15",
