--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-table": "^8.20.5",
+    "@tinymce/tinymce-react": "^5.1.1",
     "@trigger.dev/sdk": "^3.0.5",
     "@trpc/client": "^10.45.2",
     "@trpc/next": "^10.45.2",
@@ -123,6 +124,7 @@
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.169.0",
+    "tinymce": "^7",
     "ts-pattern": "^5.2.0",
     "uploadthing": "^6.13.2",
     "use-places-autocomplete": "^4.0.1",
