--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "react-h5-audio-player": "^3.9.3",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.4.0",
     "react-map-gl": "^7.1.7",
     "react-markdown": "^8.0.7",
     "react-player": "^2.16.0",
