--- a/package.json
+++ b/package.json
@@ -111,10 +111,12 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-daisyui": "^5.0.0",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.6",
     "react-h5-audio-player": "^3.9.3",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.14.0",
     "react-map-gl": "^7.1.7",
     "react-markdown": "^8.0.7",
     "react-player": "^2.16.0",
