--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "react-quill": "^2.0.0",
     "react-square-web-payments-sdk": "^3.2.1",
     "sass": "^1.77.7",
+    "square": "^39.1.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar": "^3.1.0",
