--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "jwks-rsa": "^3.1.0",
     "lodash": "^4.17.21",
     "lodash.isequal": "^4.5.0",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.274.0",
     "mapbox-gl": "^3.8.0",
     "next": "^14.2.5",
