first iteration of form filling agent.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.1.15",
+    "@ai-sdk/react": "^1.1.19",
     "@albedo-link/intent": "^0.12.0",
     "@albedo-link/signature-verification": "^0.1.2",
     "@aws-sdk/client-s3": "^3.717.0",
@@ -67,13 +69,14 @@
     "@types/three": "^0.169.0",
     "@uiw/react-md-editor": "^4.0.4",
     "@vis.gl/react-google-maps": "^1.1.0",
-    "@walletconnect/sign-client": "2.11.2",
     "@walletconnect/modal": "2.6.2",
+    "@walletconnect/sign-client": "2.11.2",
     "@walletconnect/utils": "2.13.3",
     "@web3modal/core": "2.0.0-beta.7",
     "@web3modal/react": "^2.7.1",
     "@web3modal/standalone": "^2.4.3",
     "@web3modal/ui": "2.0.0-beta.7",
+    "ai": "^4.1.47",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -134,7 +137,7 @@
     "ts-pattern": "^5.2.0",
     "use-places-autocomplete": "^4.0.1",
     "vaul": "^0.9.1",
-    "zod": "^3.23.8",
+    "zod": "^3.24.1",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
@@ -143,7 +146,6 @@
     "@types/eslint": "^8.56.10",
     "@types/formidable": "^3.4.5",
     "@types/google.maps": "^3.55.11",
-    "@walletconnect/types": "2.15.1",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash.isequal": "^4.5.8",
     "@types/node": "^18.19.39",
@@ -152,6 +154,7 @@
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "@walletconnect/types": "2.15.1",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.12.10",
     "eslint": "^8.57.0",
