--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.471.0",
     "mapbox-gl": "^3.8.0",
+    "marked": "^15.0.7",
     "next": "^14.2.5",
     "next-auth": "^4.24.7",
     "next-nprogress-bar": "^2.3.13",
