--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
     "use-places-autocomplete": "^4.0.1",
     "vaul": "^0.9.1",
     "zod": "^3.24.1",
+    "zod-to-json-schema": "^3.24.3",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
