--- a/package.json
+++ b/package.json
@@ -35,13 +35,14 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.1",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
@@ -67,8 +68,8 @@
     "@types/three": "^0.169.0",
     "@uiw/react-md-editor": "^4.0.4",
     "@vis.gl/react-google-maps": "^1.1.0",
-    "@walletconnect/sign-client": "2.11.2",
     "@walletconnect/modal": "2.6.2",
+    "@walletconnect/sign-client": "2.11.2",
     "@walletconnect/utils": "2.13.3",
     "@web3modal/core": "2.0.0-beta.7",
     "@web3modal/react": "^2.7.1",
@@ -111,6 +112,7 @@
     "react-cool-onclickoutside": "^1.7.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-daisyui": "^5.0.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "18.2.0",
     "react-h5-audio-player": "^3.9.3",
     "react-hook-form": "^7.52.1",
@@ -143,7 +145,6 @@
     "@types/eslint": "^8.56.10",
     "@types/formidable": "^3.4.5",
     "@types/google.maps": "^3.55.11",
-    "@walletconnect/types": "2.15.1",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash.isequal": "^4.5.8",
     "@types/node": "^18.19.39",
@@ -152,6 +153,7 @@
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "@walletconnect/types": "2.15.1",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.12.10",
     "eslint": "^8.57.0",
