--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
     "@types/three": "^0.169.0",
     "@uiw/react-md-editor": "^4.0.4",
     "@vis.gl/react-google-maps": "^1.1.0",
-    "@walletconnect/sign-client": "2.11.2",
     "@walletconnect/modal": "2.6.2",
+    "@walletconnect/sign-client": "2.11.2",
     "@walletconnect/utils": "2.13.3",
     "@web3modal/core": "2.0.0-beta.7",
     "@web3modal/react": "^2.7.1",
@@ -103,6 +103,7 @@
     "next-themes": "^0.3.0",
     "nextjs-cors": "^2.2.0",
     "nodemailer": "^6.9.16",
+    "openai": "^4.98.0",
     "pino": "^8.21.0",
     "pino-pretty": "^9.4.1",
     "plaiceholder": "^2.5.0",
@@ -143,7 +144,6 @@
     "@types/eslint": "^8.56.10",
     "@types/formidable": "^3.4.5",
     "@types/google.maps": "^3.55.11",
-    "@walletconnect/types": "2.15.1",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash.isequal": "^4.5.8",
     "@types/node": "^18.19.39",
@@ -152,6 +152,7 @@
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "@walletconnect/types": "2.15.1",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.12.10",
     "eslint": "^8.57.0",
